--- a/_includes/layouts/work.njk
+++ b/_includes/layouts/work.njk
@@ -5,3 +5,7 @@ layout: base.njk
 <section class="grid" id="work">
     {{ layoutContent | safe }}
 </section>
+{% set observeGrid %}
+    {% include "assets/js/observeGrid.js" %}
+{% endset %}
+<script>{{ observeGrid | jsmin | safe }}</script>
