--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -9,7 +9,7 @@
     {% set css %}
         {% include "assets/css/main.css" %}
     {% endset %}
-    <style>{{ css | safe }}</style>
+    <style>{{ css | cssmin | safe }}</style>
     <script src="https://kit.fontawesome.com/409f2580b6.js" crossorigin="anonymous"></script>
     <title>CaseyJudge | Portfolio</title>
 </head>
@@ -18,11 +18,11 @@
     <div class="container with-sidebar padding-s0">
         <div class="wrapper">
             <aside class="stack text-align-right">
-                <h1 class="logo">Casey Judge</h1>
+                <a href="/"><h1 class="logo">Casey Judge</h1></a>
                 <nav class="stack">
                     <a href="javascript:void(0);" class="mobile-menu cluster">
                         <div class="wrapper justify-content:center">
-                            <p>Menu</p><i class="fas fa-bars"></i>
+                            <p>Menu</p><i class="fas fa-bars" alt="test?"></i>
                         </div>
                     </a>
                     <div class="stack mobile-links display:none">
@@ -39,28 +39,25 @@
                             <a href="/contact">Contact</a>
                         </div>
                         <div class="cluster">
-                            <div class="wrapper">
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                                <a href="#"><i class="fab fa-linkedin"></i></a>
+                            <div class="wrapper justify-content:center">
+                                <a href="https://www.instagram.com/acaciajudge/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://twitter.com/glaack" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="mailto:acaciajudge@gmail.com" target="_blank"><i class="fas fa-envelope"></i></i></a>
                             </div>
                         </div>
-                        <footer class="cluster">
-                            <div class="wrapper">
-                                <h5 style="
-                                    width: 30ch;
-                                    text-align: right;
-                                ">site design (c) casey judge.
-                                    website built by alex lotsos.</h5>
-                            </div>
+                        <footer class="text-align-center">
+                            <h5>site design (c) casey judge.</h5>
+                            <h5>website built by alex lotsos.</h5>
                         </footer>
                     </div>
                     <div class="stack-sm work">
                         <a section-link="work" href="/work/all">All Work</a>
-                        <a style="color: #B70000;" href="/work/3d-models">3D Models</a>
-                        <a style="color: #BD8800;" href="/work/ux-ui-design">UX/UI Design</a>
-                        <a style="color: #00BD13;" href="/work/animation">Animation</a>
-                        <a style="color: #0028B7;" href="/work/interactive-media">Interactive Media</a>
-                        <a style="color: #8700B7;" href="/work/physical-computing">Physical Computing</a>
+                        <a class="cat-1" href="/work/3d-models">3D Models</a>
+                        <a class="cat-2" href="/work/ux-ui-design">UX/UI Design</a>
+                        <a class="cat-3" href="/work/animation">Animation</a>
+                        <a class="cat-4" href="/work/interactive-media">Interactive Media</a>
+                        <a class="cat-5" href="/work/physical-computing">Physical Computing</a>
                     </div>
                     <div class="stack-sm navigation">
                         <a section-link="about" href="/about">About</a>
@@ -69,18 +66,15 @@
                 </nav>
                 <div class="cluster social-media">
                     <div class="wrapper">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/glaack/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://twitter.com/glaack" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="mailto:acaciajudge@gmail.com" target="_blank"><i class="fas fa-envelope"></i></i></a>
                     </div>
                 </div>
-                <footer class="cluster footer">
-                    <div class="wrapper">
-                        <h5 style="
-                        width: 30ch;
-                        text-align: right;
-                    ">site design (c) casey judge.
-                            website built by alex lotsos.</h5>
-                    </div>
+                <footer class="text-align-right footer">
+                    <h5>site design (c) casey judge.</h5>
+                    <h5>website built by alex lotsos.</h5>
                 </footer>
             </aside>
             <main class="padding-s0">
@@ -88,10 +82,12 @@
             </main>
         </div>
     </div>
-
-    {# <script src="./js/main.js"></script> #}
-    {% set js %}
-        {% include "assets/js/main.js" %}
+    {% set navjs %}
+        {% include "assets/js/nav.js" %}
     {% endset %}
-    <script>{{ js | safe }}</script>
+    <script>{{ navjs | jsmin | safe }}</script>
+    {% set mobileMenu %}
+        {% include "assets/js/mobile-menu.js" %}
+    {% endset %}
+    <script>{{ mobileMenu | jsmin | safe }}</script>
 </body>
