--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -40,10 +40,10 @@
                         </div>
                         <div class="cluster">
                             <div class="wrapper justify-content:center">
-                                <a href="https://www.instagram.com/acaciajudge/" target="_blank"><i class="fab fa-instagram"></i></a>
-                                <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                                <a href="https://twitter.com/glaack" target="_blank"><i class="fab fa-twitter"></i></a>
-                                <a href="mailto:acaciajudge@gmail.com" target="_blank"><i class="fas fa-envelope"></i></i></a>
+                                <a href="https://www.instagram.com/acaciajudge/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://twitter.com/glaack" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                                <a href="mailto:acaciajudge@gmail.com" target="_blank" rel="noopener"><i class="fas fa-envelope"></i></i></a>
                             </div>
                         </div>
                         <footer class="text-align-center">
@@ -66,10 +66,10 @@
                 </nav>
                 <div class="cluster social-media">
                     <div class="wrapper">
-                        <a href="https://www.instagram.com/glaack/" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://twitter.com/glaack" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="mailto:acaciajudge@gmail.com" target="_blank"><i class="fas fa-envelope"></i></i></a>
+                        <a href="https://www.instagram.com/glaack/" target="_blank" rel="noopener"><i class="fab fa-instagram color:gray"></i></a>
+                        <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank" rel="noopener"><i class="fab fa-linkedin color:gray"></i></a>
+                        <a href="https://twitter.com/glaack" target="_blank" rel="noopener"><i class="fab fa-twitter color:gray"></i></a>
+                        <a href="mailto:acaciajudge@gmail.com" target="_blank" rel="noopener"><i class="fas fa-envelope color:gray"></i></i></a>
                     </div>
                 </div>
                 <footer class="text-align-right footer">
