--- a/_includes/assets/css/main.css
+++ b/_includes/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Comfortaa|Poppins:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great|Poppins:400,700&display=swap");
 *, ::before, ::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -22,7 +22,7 @@
 
 h1, .h1 {
   font-size: 3.375rem;
-  font-family: "Comfortaa", cursive;
+  font-family: "Fredericka the Great", cursive;
   letter-spacing: 0.1em;
 }
 
@@ -46,6 +46,10 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: 0.2963rem;
+}
+
+p, .p {
+  font-size: 0.8rem;
 }
 
 section {
@@ -304,6 +308,7 @@ section {
 }
 
 .logo {
+  font-weight: normal;
   line-height: 1.2;
   letter-spacing: 0.1rem;
   text-align: right;
