--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import './layout/grid';
 @import './layout/sidebar';
 @import './layout/frame';
+@import './layout/frame-square';
 @import './layout/stack';
 @import './layout/cluster';
 @import './layout/switcher';
