--- a/work/animation.njk
+++ b/work/animation.njk
@@ -5,7 +5,7 @@ layout: layouts/work.njk
 {%- for project in collections.animation -%}
 <a href= {{ project.url }}>
     <article class="card">
-        <div class="frame">
+        <div class="frame-square">
             <img src= {{ project.data.thumbnailSrc }} alt="">
         </div>
         <h4>{{ project.data.title }}</h4>
