--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -18,7 +18,7 @@
     <div class="container with-sidebar padding-s0">
         <div class="wrapper">
             <aside class="stack text-align-right">
-                <a href="/"><h1 class="logo">Casey Judge</h1></a>
+                <a href="/"><h1 class="logo">CASEY JUDGE</h1></a>
                 <nav class="stack">
                     <a href="javascript:void(0);" class="mobile-menu cluster">
                         <div class="wrapper justify-content:center">
@@ -27,12 +27,12 @@
                     </a>
                     <div class="stack mobile-links display:none">
                         <div class="stack-sm">
-                            <a section-link="work" href="/work/all">All Work</a>
-                            <a href="/work/3d-models">3D Models</a>
-                            <a href="/work/ux-ui-design">UX/UI Design</a>
-                            <a href="/work/animation">Animation</a>
-                            <a href="/work/interactive-media">Interactive Media</a>
-                            <a href="/work/physical-computing">Physical Computing</a>
+                            <a href="/">All Work</a>
+                            <a href="/#3d-models">3D Models</a>
+                            <a href="/#ux-ui-design">UX/UI Design</a>
+                            <a href="/#animation">Animation</a>
+                            <a href="/#interactive-media">Interactive Media</a>
+                            <a href="/#physical-computing">Physical Computing</a>
                         </div>
                         <div class="stack-sm">
                             <a href="/about">About</a>
@@ -40,9 +40,9 @@
                         </div>
                         <div class="cluster">
                             <div class="wrapper justify-content:center">
-                                <a href="https://www.instagram.com/acaciajudge/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                                 <a href="https://www.instagram.com/acaciajudge/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
-                                <a href="https://twitter.com/glaack" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                                <a href="https://twitter.com/acaciajudge" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
                                 <a href="mailto:acaciajudge@gmail.com" target="_blank" rel="noopener"><i class="fas fa-envelope"></i></i></a>
                             </div>
                         </div>
@@ -52,12 +52,12 @@
                         </footer>
                     </div>
                     <div class="stack-sm work">
-                        <a section-link="work" href="/work/all">All Work</a>
-                        <a class="cat-1" href="/work/3d-models">3D Models</a>
-                        <a class="cat-2" href="/work/ux-ui-design">UX/UI Design</a>
-                        <a class="cat-3" href="/work/animation">Animation</a>
-                        <a class="cat-4" href="/work/interactive-media">Interactive Media</a>
-                        <a class="cat-5" href="/work/physical-computing">Physical Computing</a>
+                        <a href="/">All Work</a>
+                        <a class="cat-1" href="/#3d-models">3D Models</a>
+                        <a class="cat-2" href="/#ux-ui-design">UX/UI Design</a>
+                        <a class="cat-3" href="/#animation">Animation</a>
+                        <a class="cat-4" href="/#interactive-media">Interactive Media</a>
+                        <a class="cat-5" href="/#physical-computing">Physical Computing</a>
                     </div>
                     <div class="stack-sm navigation">
                         <a section-link="about" href="/about">About</a>
@@ -66,10 +66,10 @@
                 </nav>
                 <div class="cluster social-media">
                     <div class="wrapper">
-                        <a href="https://www.instagram.com/glaack/" target="_blank" rel="noopener"><i class="fab fa-instagram color:gray"></i></a>
-                        <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank" rel="noopener"><i class="fab fa-linkedin color:gray"></i></a>
-                        <a href="https://twitter.com/glaack" target="_blank" rel="noopener"><i class="fab fa-twitter color:gray"></i></a>
-                        <a href="mailto:acaciajudge@gmail.com" target="_blank" rel="noopener"><i class="fas fa-envelope color:gray"></i></i></a>
+                            <a href="https://www.instagram.com/acaciajudge/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://twitter.com/acaciajudge" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                            <a href="mailto:acaciajudge@gmail.com" target="_blank" rel="noopener"><i class="fas fa-envelope"></i></i></a>
                     </div>
                 </div>
                 <footer class="text-align-right footer">
@@ -82,10 +82,6 @@
             </main>
         </div>
     </div>
-    {% set navjs %}
-        {% include "assets/js/nav.js" %}
-    {% endset %}
-    <script>{{ navjs | jsmin | safe }}</script>
     {% set mobileMenu %}
         {% include "assets/js/mobile-menu.js" %}
     {% endset %}
