--- a/index.njk
+++ b/index.njk
@@ -1,23 +1,118 @@
----
-layout: layouts/work.njk
----
+<!DOCTYPE html>
+<html lang="en">
 
-{%- for project in collections.projects -%}
-<a href= {{ project.url }}>
-    <article class="card">
-        <div class="frame">
-            <img src= {{ project.data.thumbnailSrc }} alt="">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% set css %}
+        {% include "assets/css/main.css" %}
+    {% endset %}
+    <style>{{ css | cssmin | safe }}</style>
+    <script src="https://kit.fontawesome.com/409f2580b6.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/animate-css-grid@latest"></script>
+    <title>CaseyJudge | Portfolio</title>
+</head>
+
+<body>
+    <div class="container with-sidebar padding-s0">
+        <div class="wrapper">
+            <aside class="stack text-align-right">
+                <a href="/"><h1 class="logo">CASEY JUDGE</h1></a>
+                <nav class="stack">
+                    <a href="javascript:void(0);" class="mobile-menu cluster">
+                        <div class="wrapper justify-content:center">
+                            <p>Menu</p><i class="fas fa-bars" alt="test?"></i>
+                        </div>
+                    </a>
+                    <div class="stack mobile-links display:none">
+                        <div class="stack-sm">
+                            <a filter="projects" href="/work/all">All Work</a>
+                            <a filter="3d-models" href="/work/3d-models">3D Models</a>
+                            <a filter="ux-ui-design" href="/work/ux-ui-design">UX/UI Design</a>
+                            <a filter="animation" href="/work/animation">Animation</a>
+                            <a filter="interactive-media" href="/work/interactive-media">Interactive Media</a>
+                            <a filter="physical-computing" href="/work/physical-computing">Physical Computing</a>
+                        </div>
+                        <div class="stack-sm">
+                            <a href="/about">About</a>
+                            <a href="/contact">Contact</a>
+                        </div>
+                        <div class="cluster">
+                            <div class="wrapper justify-content:center">
+                                <a href="https://www.instagram.com/acaciajudge/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://twitter.com/acaciajudge" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                                <a href="mailto:acaciajudge@gmail.com" target="_blank" rel="noopener"><i class="fas fa-envelope"></i></i></a>
+                            </div>
+                        </div>
+                        <footer class="text-align-center">
+                            <h5>site design (c) casey judge.</h5>
+                            <h5>website built by alex lotsos.</h5>
+                        </footer>
+                    </div>
+                    <div class="stack-sm work">
+                        <a filter="projects" class="active" href="/">All Work</a>
+                        <a filter="3d-models" class="cat-1" href="/work/3d-models">3D Models</a>
+                        <a filter="ux-ui-design" class="cat-2" href="/work/ux-ui-design">UX/UI Design</a>
+                        <a filter="animation" class="cat-3" href="/work/animation">Animation</a>
+                        <a filter="interactive-media" class="cat-4" href="/work/interactive-media">Interactive Media</a>
+                        <a filter="physical-computing" class="cat-5" href="/work/physical-computing">Physical Computing</a>
+                    </div>
+                    <div class="stack-sm navigation">
+                        <a section-link="about" href="/about">About</a>
+                        <a section-link="contact" href="/contact">Contact</a>
+                    </div>
+                </nav>
+                <div class="cluster social-media">
+                    <div class="wrapper">
+                            <a href="https://www.instagram.com/acaciajudge/" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/acacia-judge/" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://twitter.com/acaciajudge" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                            <a href="mailto:acaciajudge@gmail.com" target="_blank" rel="noopener"><i class="fas fa-envelope"></i></i></a>
+                    </div>
+                </div>
+                <footer class="text-align-right footer">
+                    <h5>site design (c) casey judge.</h5>
+                    <h5>website built by alex lotsos.</h5>
+                </footer>
+            </aside>
+            <main class="padding-s0">
+                <section class="grid" id="work">
+                    {%- for project in collections.projects -%}
+                        <a href= {{ project.url }}>
+                            <article class="stack-xs card" tags="{{ project.data.tags | separate | safe }}">
+                                <div class="frame-square">
+                                    <img src= {{ project.data.thumbnailSrc }} alt="">
+                                </div>
+                                <h4 class="color:gray">{{ project.data.title }}</h4>
+                            </article>
+                        </a>
+
+                    {% else %}
+                        <article style="grid-column: 1 / -1; grid-row: 1;">
+                            <h2> Ooops, Looks like this collection is empty </h2>
+                            <p> Check back when there's more here </p>
+                        </article>   
+                    {%- endfor -%}
+                </section>
+            </main>
         </div>
-        <h4>{{ project.data.title }}</h4>
-    </article>
-</a>
-
-{% else %}
-    <article style="
-    grid-column: 1 / -1;
-    grid-row: 1;
-">
-        <h2> Ooops, Looks like this collection is empty </h2>
-        <p> Check back when there's more here </p>
-    </article>   
-{%- endfor -%}
+    </div>
+    {% set observeGrid %}
+        {% include "assets/js/observeGrid.js" %}
+    {% endset %}
+    <script>{{ observeGrid | jsmin | safe }}</script>
+    {% set mobileMenu %}
+        {% include "assets/js/mobile-menu.js" %}
+    {% endset %}
+    <script>{{ mobileMenu | jsmin | safe }}</script>
+    {% set navjs %}
+        {% include "assets/js/nav.js" %}
+    {% endset %}
+    <script>{{ navjs | jsmin | safe }}</script>
+    {% set tagFilter %}
+        {% include "assets/js/tag-filter.js" %}
+    {% endset %}
+    <script>{{ tagFilter | jsmin | safe }}</script>
+</body>
