--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,12 +3,13 @@
 // Color and font variables
 $font-heading: 'Fredericka the Great', cursive;
 $font-text: 'Poppins', sans-serif;
-$color-red: rgb(184, 0, 0);
-$color-orange: rgb(189, 136, 0);
-$color-green: rgb(0, 189, 19);
-$color-blue: rgb(0, 40, 183);
-$color-purple: rgb(135, 0, 183);
+$color-red: #b80000;
+$color-orange: #bd8800;
+$color-green: #00bd13;
+$color-blue: #0028b7;
+$color-purple: #8700b7;
 $color-black: #000;
+$color-gray: #696969;
 $color-white: #fff;
 $colors: $color-red $color-orange $color-green $color-blue $color-purple;
 
@@ -57,16 +58,23 @@ h3, .h3 {
 }
 h4, .h4 {
     font-size: $s-1;
+    font-weight: normal;
 }
 h5, .h5 {
     font-size: $s-2;
+    font-weight: normal;
 }
 h6, .h6 {
     font-size: $s-3;
+    font-weight: normal;
 }
 
 p, .p {
     font-size: 0.8*$s0;
+}
+
+img, .img {
+    max-width: 100%;
 }
 
 section {
