--- a/scss/_util.scss
+++ b/scss/_util.scss
@@ -28,62 +28,62 @@
 
 // Color classes
 .color\:red {
-    color: $color-red;
+    color: $color-red !important;
 }
 .color\:orange {
-    color: $color-orange;
+    color: $color-orange !important;
 }
 .color\:green {
-    color: $color-green;
+    color: $color-green !important;
 }
 .color\:blue {
-    color: $color-blue;
+    color: $color-blue !important;
 }
 .color\:purple {
-    color: $color-purple;
+    color: $color-purple !important;
 }
 .color\:black {
-    color: $color-black;
+    color: $color-black !important;
 }
 .color\:gray {
-    color: $color-gray;
+    color: $color-gray !important;
 }
 .color\:white {
-    color: $color-white;
+    color: $color-white !important;
 }
 
 .background-color\:red {
-    color: $color-red;
+    color: $color-red !important;
 }
 .background-color\:orange {
-    color: $color-orange;
+    color: $color-orange !important;
 }
 .background-color\:green {
-    color: $color-green;
+    color: $color-green !important;
 }
 .background-color\:blue {
-    color: $color-blue;
+    color: $color-blue !important;
 }
 .background-color\:purple {
-    color: $color-purple;
+    color: $color-purple !important;
 }
 .background-color\:black {
-    color: $color-black;
+    color: $color-black !important;
 }
 .background-color\:gray {
-    color: $color-gray;
+    color: $color-gray !important;
 }
 .color\:white {
-    color: $color-white;
+    color: $color-white !important;
 }
 
 // image utility classes
 .object-fit\:contain {
-    object-fit: contain;
+    object-fit: contain !important;
 }
 
 .object-fit\:scale-down {
-    object-fit: scale-down;
+    object-fit: scale-down !important;
 }
 
 .hidden {
