--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,9 +9,10 @@
 @import './layout/cluster';
 @import './layout/switcher';
 
+@import './components/body';
 @import './components/logo';
-@import './components/mobile-menu';
 @import './components/nav';
+@import './components/card';
 
 
 @import 'util';
