--- a/index.njk
+++ b/index.njk
@@ -61,7 +61,7 @@
                                 <div class="frame-square">
                                     <img src= {{ project.data.thumbnailSrc }} alt="">
                                 </div>
-                                <h4 class="color:gray">{{ project.data.title }}</h4>
+                                <h4 class="">{{ project.data.title }}</h4>
                             </article>
                         </a>
 
