--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,10 +1,12 @@
 @media (hover: hover) {
     .card {
+        color: #696969;
         filter: grayscale(100%);
         transition: filter 0.5s ease-out;
     }
     
     .card:hover {
+        color: #000;
         filter: grayscale(0);
         transition: filter 0.5s ease-out;
     }
