--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -10,7 +10,7 @@ $color-blue: #0028b7;
 $color-purple: #8700b7;
 $color-black: #000;
 $color-gray: #696969;
-$color-white: #fff;
+$color-white: #f8f8f8;
 $colors: $color-red $color-orange $color-green $color-blue $color-purple;
 
 // ratio and modular scale
