--- a/_includes/assets/css/main.css
+++ b/_includes/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Fredericka+the+Great|Poppins:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,700|Staatliches&display=swap");
 *, ::before, ::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -22,7 +22,7 @@
 
 h1, .h1 {
   font-size: 3.375rem;
-  font-family: "Fredericka the Great", cursive;
+  font-family: "Staatliches", cursive;
   letter-spacing: 0.1em;
 }
 
