--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Fredericka+the+Great|Poppins:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700|Staatliches&display=swap');
 
 // Color and font variables
-$font-heading: 'Fredericka the Great', cursive;
+$font-heading: 'Staatliches', cursive;
 $font-text: 'Poppins', sans-serif;
 $color-red: #b80000;
 $color-orange: #bd8800;
