added box-shadow and border-thin classes

--- a/scss/_util.scss
+++ b/scss/_util.scss
@@ -89,3 +89,11 @@
 .hidden {
     display: none;
 }
+
+.border-thin {
+    border: 1px solid $color-black;
+}
+
+.box-shadow, .drop-shadow {
+    box-shadow: 5px 6px 10px $color-gray;
+}
