--- a/_includes/assets/css/main.css
+++ b/_includes/assets/css/main.css
@@ -620,4 +620,13 @@ body {
 .hidden {
   display: none;
 }
+
+.border-thin {
+  border: 1px solid #000;
+}
+
+.box-shadow, .drop-shadow {
+  -webkit-box-shadow: 5px 6px 10px #696969;
+          box-shadow: 5px 6px 10px #696969;
+}
 /*# sourceMappingURL=main.css.map */
