changed box shadow

--- a/scss/_util.scss
+++ b/scss/_util.scss
@@ -95,5 +95,5 @@
 }
 
 .box-shadow, .drop-shadow {
-    box-shadow: 5px 6px 10px $color-gray;
+    box-shadow: 0px 0px 10px rgba($color-gray, 0.4);
 }
