--- a/_includes/assets/css/main.css
+++ b/_includes/assets/css/main.css
@@ -626,7 +626,7 @@ body {
 }
 
 .box-shadow, .drop-shadow {
-  -webkit-box-shadow: 5px 6px 10px #696969;
-          box-shadow: 5px 6px 10px #696969;
+  -webkit-box-shadow: 0px 0px 10px rgba(105, 105, 105, 0.4);
+          box-shadow: 0px 0px 10px rgba(105, 105, 105, 0.4);
 }
 /*# sourceMappingURL=main.css.map */
