--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,12 +5,12 @@ $font-heading: 'Staatliches', cursive;
 $font-text: 'Poppins', sans-serif;
 $color-red: #b80000;
 $color-orange: #bd8800;
-$color-green: #00bd13;
+$color-green: #60993e;
 $color-blue: #0028b7;
 $color-purple: #8700b7;
 $color-black: #000;
 $color-gray: #696969;
-$color-white: #f8f8f8;
+$color-white: #fcfcfc;
 $colors: $color-red $color-orange $color-green $color-blue $color-purple;
 
 // ratio and modular scale
@@ -74,7 +74,7 @@ p, .p {
 }
 
 main a, main .a {
-    color: $color-orange;
+    color: $color-green;
 
     &:hover {
         text-decoration: underline;
